--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -30,7 +32,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sequelize": "^6.33.0",
-    "cookie-parser": "^1.4.6",
     "session-file-store": "^1.5.0"
   }
 }
