--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
+    "@mui/x-data-grid": "^6.18.0",
+    "@mui/x-date-pickers": "^6.18.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
