--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js -e js,json "
+    "dev": "nodemon app.js -e js,json --ignore sessions"
   },
   "keywords": [],
   "author": "",
