--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,14 @@
     "@mui/material": "^5.14.16",
     "@mui/x-data-grid": "^6.18.0",
     "@mui/x-date-pickers": "^6.18.0",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.7",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.1",
