--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "## React + Typescript + ESLint + Prettier",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,50 +10,37 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@babel/preset-react": "^7.22.15",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.16",
-    "@mui/x-data-grid": "^6.18.0",
-    "@mui/x-date-pickers": "^6.18.0",
     "@pbe/react-yandex-maps": "^1.2.5",
-    "@reduxjs/toolkit": "^1.9.7",
-    "chart.js": "^4.4.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.1",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.21.1",
-    "react-slick": "^0.29.0",
-    "redux": "^4.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-slick": "^0.23.11",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.44.0",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@types/react-slick": "^0.23.13",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "prettier": "^3.0.0",
-    "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.69.7",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.0",
-    "vite-plugin-checker": "^0.6.2"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.2"
   }
 }
