--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.22"
-   
   },
   "dependencies": {
     "@babel/core": "^7.23.7",
@@ -36,14 +35,15 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-do": "^1.1.6",
     "react-dom": "^18.2.0",
-    "session-file-store": "^1.5.0",
-     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "session-file-store": "^1.5.0"
   }
 }
