--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@types/react-slick": "^0.23.13",
