--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
-    "vite": "^5.2.2"
+    "vite": "^5.2.2",
+    "vite-plugin-checker": "^0.8.0"
   }
 }
